added 3 endpoint: save, delete bookmark and sync anime
